--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -63,9 +63,7 @@
       />
 
 
-
-
-    <TextView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/tvBlue"
         android:layout_width="0dp"
         android:layout_height="@dimen/height"
@@ -77,7 +75,7 @@
         app:layout_constraintStart_toEndOf="@+id/tvGreen"
         app:layout_constraintTop_toTopOf="@+id/tvGreen" />
 
-    <TextView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/tvGreen"
         android:layout_width="0dp"
         android:layout_height="@dimen/height"
@@ -89,7 +87,7 @@
         app:layout_constraintStart_toEndOf="@+id/tvRed"
         app:layout_constraintTop_toTopOf="@+id/tvRed" />
 
-    <TextView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/tvRed"
         android:layout_width="0dp"
         android:layout_height="@dimen/height"
@@ -103,7 +101,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/redBar" />
 
-    <TextView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/tvresult"
         android:layout_width="0dp"
         android:layout_height="110dp"
